--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  syncfusion_flutter_calendar: ^29.1.41
+  #cupertino_icons: ^1.0.8
+  syncfusion_flutter_core: ^29.1.41
+  cloud_firestore: ^5.6.7
+  firebase_core: ^3.13.0
+  #firebase_auth: ^5.5.3
+  #flutter_svg: ^1.0.3
+  #fl_chart: ^0.40.0
+  #percent_indicator: ^4.0.0
   table_calendar: ^3.2.0
+  intl: ^0.18.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +51,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
