--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,15 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
   flutter_svg: ^1.0.3
-  fl_chart: ^1.0.0
+  fl_chart: ^0.40.0
   percent_indicator: ^4.0.0
   image_picker: ^0.8.5+3
   firebase_storage: ^12.4.5
   shared_preferences: ^2.5.3
+  flutter_bloc: ^9.1.1
+  rxdart: ^0.28.0
+  flutter_image_compress: ^2.4.0
+
   syncfusion_flutter_calendar: ^29.1.41
   syncfusion_flutter_core: ^29.1.41
 
@@ -52,6 +56,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  fl_chart: ^0.40.0
   pie_chart: ^5.0.0
   intl: ^0.20.2
   table_calendar: ^3.0.8
