--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   rxdart: ^0.28.0
   flutter_image_compress: ^2.4.0
+  fl_heatmap: ^0.4.5
 
   syncfusion_flutter_calendar: ^29.1.41
   syncfusion_flutter_core: ^29.1.41
