--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   rxdart: ^0.28.0
   flutter_image_compress: ^2.4.0
   fl_heatmap: ^0.4.5
-
+  flutter_native_splash: ^2.4.6
   syncfusion_flutter_calendar: ^29.1.41
   syncfusion_flutter_core: ^29.1.41
 
@@ -61,7 +61,12 @@ dev_dependencies:
   pie_chart: ^5.0.0
   intl: ^0.20.2
   table_calendar: ^3.0.8
+  flutter_launcher_icons: ^0.13.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: assets/icons/icon.png
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -71,12 +76,16 @@ dev_dependencies:
   curved_navigation_bar: ^1.0.3
   msh_checkbox: ^1.1.1
   uuid: ^3.0.6
-  flutter_native_splash: ^2.4.6
+
+
+
 
 flutter_native_splash:
-  background_image: "assets/images/splash_image.png"
+  color: "#FFFFFF"
+  image: "assets/images/splash_image.png"
   android: true
   ios: true
+  web: false
   android_gravity: center
   ios_content_mode: center
   fullscreen: true
@@ -122,3 +131,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
